--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Insurance CF</title>
 	<link rel="stylesheet" href="./css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
 </head>
 <body>
-	
+	<header>
+		<div class="logo">
+			<div class="logotext">insurance</div>
+			<div class="logoCF"><p>CF</p></div>	
+		</div>
+		<div class="ad">
+			<a href="https://www.codefactory.wien" title="CoderFactory Advertisment"><img src="./img/banner.png" alt="CoderFactory Advertisment"></a>
+		</div>		
+	</header>
+	<nav>
+		<ul>
+			<li><a href="index.html" title="">Home</a></li>
+			<li><a href="team.html" title="">Team</a></li>
+		</ul>
+	</nav>
+	<main>
+		
+	</main>
+	<footer>
+		<div id="footernav">
+			<ul>
+				<a href="index.html" title=""><li>Home</li></a>
+				<a href="team.html" title=""><li>Team</li></a>
+			</ul>
+		</div>
+		<div class="logo">
+			<div class="logotext">insurance</div>
+			<div class="logoCF"><p>CF</p></div>	
+		</div>
+		<div class="copy">Copyright &copy;  - Roman - CoderFactory 2019</div>
+		
+	</footer>
 </body>
 </html>
