strucktur fertig, ab nun flexboxen

--- a/index.html
+++ b/index.html
@@ -19,18 +19,71 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="index.html" title="">Home</a></li>
-			<li><a href="team.html" title="">Team</a></li>
+			<li><a href="index.html" title="Home">Home</a></li>
+			<li><a href="team.html" title="Team">Team</a></li>
 		</ul>
 	</nav>
 	<main>
-		
+		<h1>Car insurance</h1>
+		<div class="shield">
+			<p>Great coverage begins with a custom quote</p>
+			<form>
+				<input type="text" name="" value="" placeholder="Your Name">
+				<input type="number" name="" value="" placeholder="Age of the car">
+				<select name="Contry">
+					<option value="">Austria</option>
+					<option value="">Hungary</option>
+					<option value="">Greece</option>	
+				</select>
+				<input type="number" name="" value="" placeholder="100">
+			</form>
+			<input type="button" name="bt1" value="Calculate">
+			
+			<div class="output">
+				printed calculation goes here
+			</div>
+			<p>
+				Un-complcating car coverage
+			</p>
+			<p>
+				understanding your coverage options shouldn't be so hard.
+				We'll guide you through available coverage types,
+				starting with who and what is covered. 
+			</p>
+			
+		</div>
 	</main>
+	<section>
+		<div class="box" id="box1">
+			<p>What comes standard</p>
+			The coverage you need
+			<ul>
+				<li>Bodily Injury Liability</li>
+				<li>Property damage</li>
+				<li>Mediacl Payments</li>
+			</ul>
+			<b>Benefits</b>
+			12-month rate guarantee | 24/7 customer
+			service | Liefetime Repar Guarantee
+			
+		</div>
+		<div class="box" id="box2">
+			<p>add-on protection & coverage</p>
+			fore more peace of mind
+			<ul>
+				<li>Better Car replacement</li>
+				<li>Towing & Labor</li>
+				<li> Rental Car Coverage</li>
+			</ul>
+			<b>Earned Benefits</b>
+			Accident Forgiveness | New Car Replacement
+		</div>
+	</section>
 	<footer>
 		<div id="footernav">
 			<ul>
-				<a href="index.html" title=""><li>Home</li></a>
-				<a href="team.html" title=""><li>Team</li></a>
+				<li><a href="index.html" title="">Home</a></li>
+				<li><a href="team.html" title="">Team</a></li>
 			</ul>
 		</div>
 		<div class="logo">
