--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 			<h2>
 				Un-complcating car coverage
 			</h2>
-			<p>
-				understanding your coverage options shouldn't be so hard.
-				We'll guide you through available coverage types,
+			<p class="tfSubtext">
+				understanding your coverage options shouldn't be so hard.<br>
+				We'll guide you through available coverage types,<br>
 				starting with who and what is covered. 
 			</p>
 		</div>
